deploy/edge/patch-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: notebook
spec:
  hosts:
    - "edge.lvh.me"
  http:
  - match:
    - uri:
        prefix: /notebook/
    rewrite:
      uri: "/"
    route:
    - destination:
        host: notebook-edge
        port:
          number: 8000
